# CMakePrecompileHeader

App/: CMakeLists.txt
App/include/: character.h  monster.h
App/src/: character.cpp  main.cpp  monster.cpp
CMake/: Helpers.cmake
Inventory/: CMakeLists.txt
Inventory/include/inventory/: weapon.h
Inventory/src/: weapon.cpp
PrecompileHeader/: CMakeLists.txt  pcheader.cpp  pcheader.h
